update and finish

--- a/projeto_galo/2014.html
+++ b/projeto_galo/2014.html
@@ -2,22 +2,22 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="img/galo_icon.webp" type="image/x-icon">
+    <title>O ano de 2014</title>
 </head>
 <body>
     <header>
-            <div>
+        <div>
             <div>
                 <a href="index.html"><img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px"></a> 
             </div>
             <nav>
                 <ul>
-                    <li><a href="1971.html">Ano de 1971</a></li>
-                    <li><a href="">Ano de 2013</a></li>
+                    <li><a href="2013.html">Ano de 2013</a></li>
                     <li><a href="2014.html">Ano de 2014</a></li>
-                    <li><a href="">Ano de 2021</a></li>
+                    <li><a href="2021.html">Ano de 2021</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,9 +28,7 @@
             <div>
                 <div>
                     <h1>O inicio da temporada de 2014</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, facere! Rem, eos debitis! Consequatur, deleniti. Est tempora esse vel illum impedit cum ipsa non quae eveniet, obcaecati minima qui quisquam?
-                    Voluptatibus dicta molestias blanditiis excepturi nihil in nostrum libero, nulla aliquam quidem nemo atque sit, harum temporibus fuga. Animi temporibus exercitationem et illum corporis est debitis beatae eos dolore molestiae.
-                    Perspiciatis, ut! Excepturi sed tempore odit dolor, ad praesentium est totam quas nihil amet, rerum repellat consectetur laborum architecto necessitatibus, delectus quidem veniam deserunt? Dolores, voluptatum. Doloremque blanditiis nobis dignissimos!</p>
+                    <p>A temporada de 2014 começou com grandes expectativas para o Atlético Mineiro, que vinha da conquista da inédita Copa Libertadores em 2013. O elenco, liderado por nomes como Ronaldinho, Diego Tardelli, Victor, Réver e Jô, manteve a base campeã e partiu em busca de novas glórias. Logo no início do ano, o time conquistou mais um título internacional: a Recopa Sul-Americana, derrotando o Lanús, da Argentina, em dois jogos memoráveis. No jogo de volta, no Mineirão, o Galo venceu por 4 a 3 na prorrogação, com direito a gol contra e muita emoção até o fim. Foi o primeiro título oficial do clube no ano, e uma prova de que o espírito de luta do time permanecia intacto.</p>
                 </div>
                 <div>
                     <img src="img/recopa.jpg" alt="" srcset="img/recopa_mobile.webp 400w, img/recopa_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
@@ -43,8 +41,7 @@
                 <div class="first">
                     <div>
                         <h1>A historica campanha para a Copa do Brasil 2014</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum eaque voluptatem quibusdam. Ipsum deserunt, corrupti ea consequatur reprehenderit voluptates nemo! Veniam nesciunt obcaecati ut esse libero hic ratione sequi.
-                        Aut dicta unde eveniet ex omnis libero iusto nihil nemo quo exercitationem quod molestiae mollitia odio animi rerum optio impedit et, consequuntur ut similique vero doloribus praesentium magnam. Consequuntur, officiis.</p>
+                        <p>A Copa do Brasil de 2014 ficou marcada como uma das campanhas mais emocionantes da história do futebol brasileiro. O Atlético Mineiro entrou na competição com fome de título, enfrentando grandes adversários e protagonizando reviravoltas históricas. Sob o comando do técnico Levir Culpi, o time mostrou resiliência, raça e confiança, superando adversidades e construindo vitórias épicas, jogo após jogo. A cada fase, o Galo parecia mais determinado, e a torcida vivia intensamente cada confronto, transformando o Mineirão em um verdadeiro caldeirão alvinegro.</p>
                     </div>
                     <img src="img/2014.jpeg" alt="" srcset="img/2014_mobile.webp 400w, img/2014_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                 </div>
@@ -53,12 +50,12 @@
                     <div class="jogo">
                         <img src="img/camxpal.webp" alt="" srcset="img/camxpal_mobile.webp 400w, img/camxpal_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>PAL 0x1 CAM</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                        <p>Na estreia do mata-mata, o Atlético enfrentou o Palmeiras em São Paulo. Com uma atuação segura e estratégica, o Galo venceu por 1 a 0, gol de Luan, levando vantagem para o jogo de volta.</p>
                     </div>
                     <div class="jogo">
                         <img src="img/palvolta.webp" alt="" srcset="img/palvolta_mobile.webp 400w, img/palvolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>CAM 2x0 PAL</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                        <p>No Mineirão lotado, o Atlético não deu chances ao adversário. Com gols de Maicosuel e Guilherme, o time garantiu a classificação com autoridade, vencendo por 2 a 0. Era só o começo do que viria a ser uma das campanhas mais históricas da Copa do Brasil.</p>
                     </div>
                 </div>
             </div>
@@ -67,42 +64,69 @@
         <section class="campanha">
             <h2>A quartas de final</h2>
             <div class="quarta">
-                    <div class="jogo">
+                <div class="jogo">
                         <img src="img/corida.jpeg" alt="" srcset="img/corida_mobile.webp 400w, img/corida_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>COR 2x0 CAM</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
-                    </div>
-                    <div class="jogo">
+                        <p>Em São Paulo, o Atlético sofreu um revés por 2 a 0 e parecia estar com a vaga ameaçada. O adversário era forte e experiente, e muitos já apontavam o fim da trajetória do Galo.</p>
+                </div>
+                <div class="jogo">
                         <img src="img/corvolta.webp" alt="" srcset="img/corvolta_mobile.webp 400w, img/corvolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>CAM 4x1 COR</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
-                    </div>
+                        <p>Mas o Mineirão presenciou uma noite mágica. Com um futebol ofensivo, vibrante e envolvente, o Galo virou o confronto de forma histórica. Com gols de Carlos, Guilherme e Luan, o Atlético venceu por 4 a 1, garantindo a classificação com o grito da Massa empurrando o time durante os 90 minutos. Foi o primeiro "milagre" da campanha.</p>
+                </div>
             </div>
             <h2>A semi-final</h2>
             <div class="quarta">
                     <div class="jogo">
                         <img src="img/flaida.webp" alt="" srcset="img/flaida_mobile.webp 400w, img/flaida_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>FLA 2x0 CAM</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                        <p>Mais uma vez o Atlético enfrentou uma grande equipe e saiu atrás. No Maracanã, o Flamengo venceu por 2 a 0, deixando a situação do Galo bastante complicada.</p>
                     </div>
                     <div class="jogo">
                         <img src="img/flavolta.jpg" alt="" srcset="img/flavolta_mobile.webp 400w, img/flavolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <figcaption><h3>Jogo de ida:</h3> <p>CAM 4x1 FLA</p></figcaption>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                        <p>Mas o impossível não existe para o Atlético Mineiro. No Mineirão, o time novamente virou de forma espetacular, vencendo por 4 a 1. Os gols foram marcados por Maicosuel, Dátolo, Luan e Edison, em uma partida inesquecível que ficou marcada como uma das maiores viradas da história do futebol nacional. Era a segunda virada consecutiva — o Galo estava na final!</p>
                     </div>
             </div>
         </section>
 
         <section class="final">
             <h1>A grande final</h1>
-            <div class="jogo1">
+            <div class="play">
                     <div>
                         <h2>O primeiro jogo</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum eaque voluptatem quibusdam. Ipsum deserunt, corrupti ea consequatur reprehenderit voluptates nemo! Veniam nesciunt obcaecati ut esse libero hic ratione sequi.</p>
+                        <p>No jogo de ida da final, o Atlético mostrou força e personalidade contra o Cruzeiro. Em uma partida de alto nível técnico e muita entrega, o Galo venceu por 2 a 0 com gols de Luan e Dátolo. O resultado deu uma vantagem importante para o jogo de volta, aumentando ainda mais a confiança da torcida.</p>
+                        <figcaption><h3>Jogo de ida:</h3> <p>CAM 2x0 CRU</p></figcaption>
                     </div>
                     <img src="img/copa14.webp" alt="" srcset="img/copa14_mobile.webp 400w, img/copa14_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+            </div>
+            <div class="play contra">
+                <div>
+                    <h2>O segundo jogo</h2>
+                    <p>Na partida decisiva, o Galo entrou em campo concentrado e decidido a fechar com chave de ouro sua campanha. Com um golaço de Diego Tardelli, o Atlético venceu novamente e confirmou o título com um agregado de 3 a 0. Foi a consagração de uma campanha lendária, com três viradas históricas contra grandes adversários e um título conquistado sobre o maior rival. A Copa do Brasil de 2014 entrou para a eternidade como uma das maiores conquistas do Atlético Mineiro.</p>
+                    <figcaption><h3>Jogo de ida:</h3> <p>CRU 0x1 CAM</p></figcaption>
                 </div>
+                <div>
+                    <img src="img/copa142.jpg" alt="" srcset="img/copa142_mobile.webp 400w, img/copa142_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div>
+            <div>
+                <img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px">
+                <p>&copy; 2025 - Projeto Final PWE</p>
+            </div>
+            <div>
+                <h3>Redes Sociais</h3>
+                <p>INSTAGRAM: <a href="https://www.instagram.com/atletico/">instagram.com/atletico</a></p>
+                <p>TWITTER: <a href="https://x.com/atletico">x.com/atletico</a></p>
+                <p>YOUTUBE: <a href="https://www.youtube.com/@atletico">youtube.com/@atletico</a></p>
+                <p>TIKTOK: <a href="https://www.tiktok.com/@atletico">tiktok.com/@atletico</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
