--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -2,14 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="galo, atletico mineiro, maior de minas, el mnineiro, galo doido, ronaldinho gaucho, hulk">
     <meta name="author" content="Caio Henrique Martins Basilio">
     <meta name="description" content="Site do projeto final de pwe do maior time de minas e do mundo">
+    <link rel="shortcut icon" href="img/galo_icon.webp" type="image/x-icon">
     <title>Site do gigante</title>
 </head>
 <body>
+    
     <header>
         <div>
             <div>
@@ -17,10 +19,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="1971.html">Ano de 1971</a></li>
-                    <li><a href="">Ano de 2013</a></li>
-                    <li><a href="">Ano de 2014</a></li>
-                    <li><a href="">Ano de 2021</a></li>
+                    <li><a href="2013.html">Ano de 2013</a></li>
+                    <li><a href="2014.html">Ano de 2014</a></li>
+                    <li><a href="2021.html">Ano de 2021</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,10 +36,7 @@
                     <img src="img/galo-inicio.jpg" alt="" srcset="img/galo-inicio-mobile.webp 430w, img/galo-inicio-desktop.webp 550w" sizes="(max-width:767px) 430px, 550px">
                 </div>
                 <div class="lore">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, minima accusamus ducimus nisi atque itaque eveniet molestias debitis a quisquam laudantium, nam blanditiis inventore sed dolorem voluptate dolores magnam aliquid.
-                    Tempora velit, nostrum adipisci sint est quidem, sunt asperiores dignissimos incidunt nesciunt suscipit? Sapiente quis adipisci expedita illum. Illum facilis et totam harum dolore laboriosam repudiandae minus quas rem fugiat.
-                    Nesciunt, sed molestias? Laboriosam voluptates aut totam labore rem, laudantium commodi numquam ipsum nihil sint consectetur id eum quo doloribus. Corporis harum recusandae dolore eos ullam? Accusamus eveniet vel voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laudantium? Obcaecati quidem, incidunt quae enim non impedit eum velit similique perferendis itaque vitae. Laborum adipisci sunt natus, omnis consequuntur laudantium.
-                    Ipsa earum magni odit tempore, temporibus voluptatem tenetur non sunt commodi quod, quos facere accusamus rerum quae quidem modi vero expedita mollitia! Quas, alias cum quos dignissimos minus ipsum assumenda.</p>
+                    <p>Fundado no dia 25 de março de 1908, no coreto do Parque Municipal de Belo Horizonte, por um grupo de 22 jovens, o Clube Atlético Mineiro logo adotou as cores preto e branco e o símbolo do Galo, representando raça, coragem e tradição. Em 1909, o clube realizou sua primeira partida oficial e, em 1914, venceu a Taça Bueno Brandão. No ano seguinte, conquistou o primeiro Campeonato Mineiro. Durante os anos 1920, o Atlético formou o lendário “Trio Maldito” — Mário de Castro, Jairo e Said — que levou o clube a diversos títulos estaduais e à construção do Estádio Antônio Carlos. Em 1937, venceu o Torneio dos Campeões, considerado por muitos como o primeiro Campeonato Brasileiro. Desde então, a trajetória do Galo se fortaleceu com conquistas históricas e crescimento contínuo, culminando em feitos memoráveis como a Libertadores de 2013 e a construção da moderna Arena MRV.</p>
                 </div>
             </div>
         </section>
@@ -52,7 +50,7 @@
                         <img src="img/victor.jpg" alt="" srcset="img/victor_mobile.webp 400w, img/victor_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                        <p>Victor chegou ao Atlético em 2012 e rapidamente se tornou um ícone da torcida. Sua defesa de pênalti nos minutos finais contra o Tijuana, na Libertadores de 2013, virou símbolo de fé e resistência. Foram mais de 400 jogos com a camisa alvinegra e títulos importantes como a Libertadores, Recopa, Copa do Brasil e estaduais. Respeitado por sua liderança e postura, hoje atua como diretor de futebol do clube, mostrando que sua ligação com o Galo vai muito além das quatro linhas.</p>
                     </div>
                 </div>
                 <div class="reverso">
@@ -61,7 +59,7 @@
                         <img src="img/ronaldo.jpg" alt="" srcset="img/ronaldo_mobile.webp 400w, img/ronaldo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                        <p>A chegada de Ronaldinho em 2012 marcou uma revolução no clube. Com seu carisma e talento, ele liderou o time na histórica campanha da Libertadores de 2013, devolvendo ao torcedor o orgulho e o prestígio internacional. Dentro de campo, encantava com dribles e assistências. Fora dele, atraiu a atenção do mundo todo para o Atlético, consolidando sua imagem de ídolo eterno do clube.</p>
                     </div>
                 </div>
                 <div>
@@ -70,7 +68,7 @@
                         <img src="img/hulk.webp" alt="" srcset="img/hulk_mobile.webp 400w, img/hulk_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                        <p>Desde que chegou, Hulk se tornou símbolo de comprometimento, força e liderança. Foi artilheiro do Brasileirão e da Copa do Brasil em 2021, ano em que o Galo conquistou os dois títulos. Com gols decisivos, atuações impressionantes e identificação total com a torcida, Hulk se consolidou como um dos maiores jogadores da história do clube, tanto em números quanto em importância nas conquistas recentes. Mesmo com o passar dos anos, segue sendo protagonista e referência técnica da equipe.</p>
                     </div>
                 </div>
                 <div class="reverso">
@@ -79,7 +77,7 @@
                         <img src="img/reinaldo.jfif" alt="" srcset="img/reinaldo.webp 400w, img/reinaldo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                        <p>Reinaldo, o “Rei”, é o maior artilheiro da história do Atlético. Com 255 gols em 475 partidas, brilhou especialmente nas décadas de 1970 e 1980. Além da técnica refinada, tinha faro de gol e personalidade marcante. Foi campeão mineiro diversas vezes e é lembrado como um dos grandes ídolos do futebol brasileiro. Representou a alma atleticana dentro e fora de campo, sendo até hoje reverenciado por sua história no clube.</p>
                     </div>
                 </div>
             </div>
@@ -90,16 +88,12 @@
                 <div>
                     <figcaption>Cruzeiro, o maior rival</figcaption>
                     <img src="img/marias.jpg" alt="" srcset="img/marias_mobile.webp 400w, img/marias_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, dolorem, vero itaque dolor illum totam magni suscipit quia soluta, vitae quibusdam pariatur animi consequuntur corrupti quos earum ut sequi quasi?
-                    Distinctio porro, obcaecati nemo hic nam, quae suscipit recusandae nobis deleniti, accusantium omnis perspiciatis harum vel perferendis culpa aliquid facere numquam earum libero illo. Qui amet veritatis expedita corrupti repellat.
-                    Optio eveniet voluptatum nihil commodi quis voluptas velit earum, iusto, nostrum quae molestias neque, exercitationem ipsa? Animi blanditiis deleniti ad molestiae error. Aspernatur quidem at saepe nemo magnam quos quasi?</p>
+                    <p>O clássico entre Atlético e Cruzeiro é um dos maiores do futebol brasileiro. Repleto de história, equilíbrio e emoções, movimenta Minas Gerais como nenhum outro jogo. Ao longo das décadas, foram finais épicas, disputas intensas e capítulos inesquecíveis. Cada confronto é tratado como decisão e envolve toda a paixão das duas torcidas.</p>
                 </div>
                 <div>
                     <figcaption>Flamengo, o rival de outro estado</figcaption>
                     <img src="img/framengo.webp" alt="" srcset="img/framengo_mobile.webp 400w, img/framengo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus omnis praesentium tempore ut temporibus repellat illo unde nisi explicabo. Illum non ea sunt repellendus saepe eveniet numquam eaque vitae deserunt.
-                    Inventore repellendus a provident? Tenetur, architecto facilis exercitationem odio voluptates ratione nisi laborum ut nemo omnis inventore, soluta quo repellendus natus culpa fugiat voluptas labore sint non fugit vitae? Aliquid.
-                    Iure assumenda provident incidunt impedit dicta amet velit, voluptas dolor earum adipisci fuga mollitia maxime temporibus nam natus voluptate ad molestiae est, unde ipsa harum quidem minus eius. Eligendi, aut!</p>
+                    <p>A rivalidade com o Flamengo ganhou força com o passar dos anos e se consolidou em confrontos nacionais marcantes. Desde as décadas passadas até os jogos recentes, Atlético e Flamengo protagonizaram partidas cheias de emoção, polêmica e peso histórico. É um duelo que transcende a distância geográfica e se tornou um dos grandes clássicos interestaduais do futebol brasileiro.</p>
                 </div>
             </div>
         </section>
