--- a/projeto_galo/2021.html
+++ b/projeto_galo/2021.html
@@ -28,9 +28,7 @@
             <div>
                 <div>
                     <h1>A historica temporada de 2021</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur quidem incidunt amet aperiam recusandae alias sunt, et cum, nisi ratione illo quod porro, aliquid a quam similique ab error!
-                    Possimus saepe, quisquam repellat dolor vitae aliquid nemo ipsam illum quis rerum! Repellat a ea voluptate iusto dolorum accusantium, laborum assumenda itaque excepturi quasi illum, earum quisquam qui. Provident, earum.
-                    In labore vero sequi, cumque voluptatem minus accusamus odit cupiditate consectetur, provident fugiat ad ut possimus veritatis aperiam! Voluptate aliquam ducimus rem aperiam. Maxime ut accusantium hic quidem repudiandae repellat.</p>
+                    <p>A temporada de 2021 marcou um dos anos mais gloriosos da história do Clube Atlético Mineiro. Sob o comando do técnico Cuca, o Galo apresentou um futebol dominante, agressivo e extremamente eficiente, encantando o país com atuações marcantes e resultados expressivos. Com um elenco equilibrado e recheado de talentos, o time demonstrou regularidade ao longo do ano e protagonizou uma campanha que ficará eternizada na memória dos torcedores. Jogadores como Hulk, Nacho Fernández, Guilherme Arana, Zaracho, Mariano, Jair, e Everson formaram a espinha dorsal de uma equipe sólida, que se impôs nos principais palcos do futebol nacional. Mais do que os títulos, 2021 representou a retomada do protagonismo do Atlético no cenário nacional. O clube provou sua força dentro e fora de campo, bateu recordes, superou rivais históricos e resgatou o orgulho de milhões de torcedores.</p>
                 </div>
                 <div>
                     <img src="img/2021.jpg" alt="" srcset="img/2021_mobile.webp 400w, img/2021_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
